Add asset category counts to list response
